@@ -14,32 +14,38 @@ Priority Issues (Fix These First)
 - AI
   - case procedures
     - negative tests - syntax
+    - optional when / =>
 - modernizing
   - keyword hilighting when displaying an error on the command line
     (with --colour)
 
-- test reports need to be checked
-  - html escape of messages with ">", like shell commands
-  - compiler / escape ident for example
-  - text escaping of names will break foreign languages (check individually in communications)
-    - toEscape invisible characters, not high ones -outside of byte code dump
-
-  ...but must be HTML escaped?
+  - checking error display rewrite
+    - test reports need to be checked
+    - compiler / escape ident for example
+    - test international characters and escaping
     - in get...position, do we even use fullTemplateErrorMessage when
       breaking out? check.
-    - test international characters and escaping
     - security testing
       - I should write tests that validate we're escaping
     - ensure all output is properly escaped for the template format
       (yaml - are there any, JavaScript / XML (no close comments)
     - the byte code dump should be formatted for colour?
+    - removing dependences from pegasoft.user_io, if possible
+    - get command line has selectable template but output fns do not
+    - textMessage should possibly be consoleMessage
+    - fullTemplateErrorMessage is redundant with fullErrorMessage as a messageStrings
+    - raise exception does not have "script /= """ so why have that in err_shell?
+    - err_shell getnewLine should probably be inside the if
+    - yaml templates and commenting out errors
+
+- indenting columns in GetCommandLine may be an issue with markup
   - colour does not always switch back to the correct colour (i.e. bright
     white may revert to dim white after showing help index)
   - showing 3 lines of code instead of one on an error, to improve
     the context.  Possibly hilight the middle line with the error.
 
 - bug
-  MakeIncl issue
+  - MakeIncl issue
   - first word of quiet errors should not be capitalized if it's an
     identifier name
 - test templates
